--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Countries</h1>
-    <ul id="country-list">
-    </ul>
+    <select id="country-list">
+      <option disabled selected>Please select a country</option>
+    </select>
   </body>
 </html>
