Added function to display country information

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <select id="country-list">
       <option disabled selected>Please select a country</option>
     </select>
+    <ul id="selected-country-data">
+      
+    </ul>
   </body>
 </html>
