Added ability to see bordering country details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       <option disabled selected>Please select a country</option>
     </select>
     <ul id="selected-country-data">
-      
+
     </ul>
+    <div id="border-countries">
+
+    </div>
   </body>
 </html>
