region and sub-region now working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   </head>
   <body>
     <h1>Countries</h1>
-    <select id="country-list">
-      <option disabled selected>Please select a country</option>
+    <select id="region-list">
+      <option disabled selected>Please select a region</option>
+    </select>
+    <select id="sub-region-list" disabled>
+    </select>
+    <select id="country-list" disabled>
     </select>
     <ul id="selected-country-data">
 
