--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       <option disabled selected>Please select a region</option>
     </select>
     <select id="sub-region-list" disabled>
+      <option disabled selected>Please select a sub-region</option>
     </select>
     <select id="country-list" disabled>
+      <option disabled selected>Please select a country</option>
     </select>
     <ul id="selected-country-data">
 
