--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Countries Lab</title>
+    <title>Countries</title>
     <script src="app.js"></script>
   </head>
   <body>
